--- a/ansible/deploy.yaml
+++ b/ansible/deploy.yaml
@@ -1,6 +1,10 @@
 ---
 - hosts: webserver2
   become: yes
+  vars:
+    github_repo_url: "https://github.com/AGLoCo13/Node-React.js-Expenses-Application.git"
+    project_directory: "/var/www/mern_app"
+    pm2_app_name: "mern_app_backend"
   tasks:
     - name: Add Docker GPG key
       shell: |
@@ -47,6 +51,14 @@
         mode: 'a+x'
       become: yes
       become_user: root
+
+    - name: Clone the project repository from GitHub
+      ansible.builtin.git:
+        repo: "{{ github_repo_url }}"
+        dest: "{{ project_directory }}"
+        clone: yes
+        update: yes
+        force: yes
 
     - name: Build and Start Docker Compose
       command: docker-compose -f /var/www/mern_app/docker-compose.yml up -d
