--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,21 +4,20 @@ FROM node:18-alpine
 # Set the working directory in the container
 WORKDIR /usr/src/app
 
-# Copy package.json and package-lock.json to work directory
-COPY package*.json ./
+# Copy package.json and yarn.lock to work directory
+COPY package*.json yarn.lock ./
 
-# Install any needed packages specified in package.json
-RUN npm install
+# Install Yarn globally
+RUN npm install -g yarn
+
+# Install project dependencies
+RUN yarn install --frozen-lockfile
 
 # Bundle the source code inside the Docker image
 COPY . .
 
-# Build the React application
-RUN npm run build
+# Make port 5000 available to the world outside this container
+EXPOSE 5000
 
-# Install serve to serve the build folder on port 3000
-RUN npm install -g serve
-CMD ["serve", "-s", "build", "-l", "3000"]
-
-# Make port 3000 available to the world outside this container
-EXPOSE 3000
+# Define the command to run your app
+CMD ["yarn", "start"]
