--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,16 +2,16 @@
 FROM node:18-alpine
 
 # Set the working directory in the container
-WORKDIR /var/www/mern_app/backend
+WORKDIR /usr/src/app
 
 # Copy package.json and package-lock.json to work directory
-COPY package*.json ./
+COPY backend/package*.json ./
 
 # Install any needed packages specified in package.json
 RUN npm install
 
 # Bundle the source code inside the Docker image
-COPY . .
+COPY backend/ .
 
 # Make port 5000 available to the world outside this container
 EXPOSE 5000
