--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,6 +9,7 @@ COPY backend/package*.json ./
 
 # Install any needed packages specified in package.json
 RUN npm install
+RUN npm install mongoose
 
 # Bundle the source code inside the Docker image
 COPY backend/ .
