--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,20 @@
-# Build Stage
-FROM node:18-alpine AS builder
-WORKDIR /usr/src/app/
-COPY package*.json ./
-RUN npm install
-COPY . .
-
-# Production Stage
+# Use an official Node runtime as a parent image
 FROM node:18-alpine
-WORKDIR /usr/src/app/
-COPY --from=builder /usr/src/app .
+
+# Set the working directory in the container
+WORKDIR /usr/src/app/backend
+
+# Copy package.json and package-lock.json to work directory
+COPY backend/package*.json ./
+
+# Install any needed packages specified in package.json
+RUN npm ci --only=production
+
+# Bundle the source code inside the Docker image
+COPY backend/ .
+
+# Make port 5000 available to the world outside this container
 EXPOSE 5000
+
+# Define the command to run your app
 CMD ["npm", "start", "server.js"]
