--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,11 @@
-# Use an official Node runtime as a parent image
 FROM node:18-alpine
 
-# Set the working directory in the container
-WORKDIR /usr/src/app/backend
+WORKDIR /app
 
-# Copy package.json and package-lock.json to work directory
-COPY backend/package*.json ./
+COPY package.json .
 
-# Install any needed packages specified in package.json
-RUN npm ci --only=production
-RUN npm install mongoose
+RUN npm install
 
-# Bundle the source code inside the Docker image
-COPY backend ./
+COPY . .
 
-# Make port 5000 available to the world outside this container
-EXPOSE 5000
-
-# Define the command to run your app
-CMD ["npm", "start", "server.js"]
+CMD ["npm" , "start"]
